@@ -14,6 +14,7 @@ Backwards compatibility notes
     * FOF40\Encrypt\AesAdapter\AdapterInterface::setEncryptionMode() no longer has the second parameter (strength).
     * Passing null to FOF40\Model\DataModel::blacklistFilters instead of using getBlacklistFilters
     * FOF40\Utils\StringHelper::toSlug()
+    * FOF40\Utils\StringHelper::toASCII()
 * The AkeebaStrapper renderer has been removed. Use the Joomla3 renderer isntead
 
 *** LEGEND ***
